--- a/doc/arxiv/v2/thesis.tex
+++ b/doc/arxiv/v2/thesis.tex
@@ -242,15 +242,15 @@ when the \emph{original} $y$ has $W=1$. Similarly, if $W=0$, we compare $R(\text
   \State \textbf{Input:} Dataset $\{(x^i, y^{i}, w^{i})\}$, reward model $R$, rewrite function $\text{Re}$
   \State \textbf{Return:} Estimates $\widehat{\text{ATT}}_{\text{RATE}}$, $\widehat{\text{ATU}}_{\text{RATE}}$, and $\widehat{\text{ATE}}_{\text{RATE}}$
   \State \textbf{Compute:} $n_1 = \sum_{i} \mathbf{1}[w^{i}=1], \quad n_0 = \sum_{i} \mathbf{1}[w^{i}=0]$
-  \State \textbf{For all }(i): \textbf{obtain rewrites} $\text{Re}(x^i, y^{i}, 0)$ if $w^{i} = 1$ and $\text{Re}(x^i, y^{i}, 1)$ if $w^{i} = 0$
+  \State \textbf{For all }i: \textbf{obtain rewrites} $\text{Re}(x^i, y^{i}, 0)$ if $w^{i} = 1$ and $\text{Re}(x^i, y^{i}, 1)$ if $w^{i} = 0$
   \State \textbf{For all rewrites:} generate a rewrite-of-rewrite in the opposite direction
   \State \textbf{ATT:}
   \[
-    \widehat{\text{ATT}}_{\text{RATE}} = \frac{1}{n_1} \sum_{(i)\colon w^{i}=1} \Bigl[\,R\bigl(x^i, \text{Re}(x^i, \text{Re}(x^i, y^{i},0),1)\bigr) - R\bigl(x^i,\text{Re}(x^i, y^{i},0)\bigr)\Bigr].
+    \widehat{\text{ATT}}_{\text{RATE}} = \frac{1}{n_1} \sum_{i\colon w^{i}=1} \Bigl[\,R\bigl(x^i, \text{Re}(x^i, \text{Re}(x^i, y^{i},0),1)\bigr) - R\bigl(x^i,\text{Re}(x^i, y^{i},0)\bigr)\Bigr].
   \]
   \State \textbf{ATU:}
   \[
-    \widehat{\text{ATU}}_{\text{RATE}} = \frac{1}{n_0} \sum_{(i)\colon w^{i}=0} \Bigl[\,R\bigl(x^i, \text{Re}(x^i, y^{i},1)\bigr) - R\bigl(x^i,\text{Re}(x^i, \text{Re}(x^i, y^{i},1),0)\bigr)\Bigr].
+    \widehat{\text{ATU}}_{\text{RATE}} = \frac{1}{n_0} \sum_{i\colon w^{i}=0} \Bigl[\,R\bigl(x^i, \text{Re}(x^i, y^{i},1)\bigr) - R\bigl(x^i,\text{Re}(x^i, \text{Re}(x^i, y^{i},1),0)\bigr)\Bigr].
   \]
   \State \textbf{ATE: }
   \[
@@ -304,8 +304,8 @@ Under these assumptions, we have:
 Let $R(X, Y(W,Z,\xi)) = R_{W, Z}(X, W, Z) + R_{\xi}(X, \xi)$ and $\text{Re}(Y(W, Z, \xi), 1 - W) \equaldist Y(1 - W, Z, \tilde{\xi})$ where $\tilde{\xi} \dist P_\text{Re}(\tilde{\xi})$. Also assume $R(\cdot, \cdot)$ is bounded. Suppose we have a set of prompt-completion pairs $\{x^i, y^{i}\}$ sampled i.i.d., with $P(W=1) \in (0, 1)$.
   Then the RATE estimators, defined as:
   \begin{align*}
-  \widehat{\text{ATT}}_{\text{RATE}} &= \frac{1}{n_1} \sum_{(i): w^{i} = 1} [R(x^i, \text{Re}(\text{Re}(y^{i}, 0), 1)) - R(x^i, \text{Re}(y^{i}, 0))] \\
-  \widehat{\text{ATU}}_{\text{RATE}} &= \frac{1}{n_0} \sum_{(i): w^{i} = 0} [R(x^i, \text{Re}(y^{i}, 1)) - R(x^i, \text{Re}(\text{Re}(y^{i}, 1), 0))] \\
+  \widehat{\text{ATT}}_{\text{RATE}} &= \frac{1}{n_1} \sum_{i: w^{i} = 1} [R(x^i, \text{Re}(\text{Re}(y^{i}, 0), 1)) - R(x^i, \text{Re}(y^{i}, 0))] \\
+  \widehat{\text{ATU}}_{\text{RATE}} &= \frac{1}{n_0} \sum_{i: w^{i} = 0} [R(x^i, \text{Re}(y^{i}, 1)) - R(x^i, \text{Re}(\text{Re}(y^{i}, 1), 0))] \\
   \widehat{\text{ATE}}_{\text{RATE}} &= \frac{n_1}{n_0 + n_1} \widehat{\text{ATT}}_{\text{RATE}} + \frac{n_0}{n_0 + n_1} \widehat{\text{ATU}}_{\text{RATE}}
 \end{align*}
 where $n_1$ and $n_0$ are the number of pairs with observed $W = 1$ and $W = 0$ respectively, are unbiased and $\sqrt{n}$-consistent estimators of the ATT, ATU, and ATE.
@@ -412,8 +412,8 @@ Overall, RATE paves the way for more causally rigorous auditing of reward models
 Let $R(X, Y(W,Z,\xi)) = R_{W, Z}(X, W, Z) + R_{\xi}(X, \xi)$ and $\text{Re}(Y(W, Z, \xi), 1 - W) \equaldist Y(1 - W, Z, \tilde{\xi})$ where $\tilde{\xi} \dist P_\text{Re}(\tilde{\xi})$. Also assume $R(\cdot, \cdot)$ is bounded. Suppose we have a set of prompt-completion pairs $\{x^i, y^{i}\}$ sampled i.i.d., with $P(W=1) \in (0, 1)$.
 Then the RATE estimators, defined as:
 \begin{align*}
-\widehat{\text{ATT}}_{\text{RATE}} &= \frac{1}{n_1} \sum_{(i): w^{i} = 1} [R(x^i, \text{Re}(\text{Re}(y^{i}, 0), 1)) - R(x^i, \text{Re}(y^{i}, 0))] \\
-\widehat{\text{ATU}}_{\text{RATE}} &= \frac{1}{n_0} \sum_{(i): w^{i} = 0} [R(x^i, \text{Re}(y^{i}, 1)) - R(x^i, \text{Re}(\text{Re}(y^{i}, 1), 0))] \\
+\widehat{\text{ATT}}_{\text{RATE}} &= \frac{1}{n_1} \sum_{i: w^{i} = 1} [R(x^i, \text{Re}(\text{Re}(y^{i}, 0), 1)) - R(x^i, \text{Re}(y^{i}, 0))] \\
+\widehat{\text{ATU}}_{\text{RATE}} &= \frac{1}{n_0} \sum_{i: w^{i} = 0} [R(x^i, \text{Re}(y^{i}, 1)) - R(x^i, \text{Re}(\text{Re}(y^{i}, 1), 0))] \\
 \widehat{\text{ATE}}_{\text{RATE}} &= \frac{n_1}{n_0 + n_1} \widehat{\text{ATT}}_{\text{RATE}} + \frac{n_0}{n_0 + n_1} \widehat{\text{ATU}}_{\text{RATE}}
 \end{align*}
 where $n_1$ and $n_0$ are the number of pairs with observed $W = 1$ and $W = 0$ respectively, are unbiased and $\sqrt{n}$-consistent estimators of the ATT, ATU, and ATE.
